--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@capacitor/core": "latest",
     "@capacitor/camera": "latest",
+    "@capacitor/core": "latest",
+    "@capacitor/ios": "^5.7.4",
     "@capacitor/splash-screen": "latest"
   },
   "devDependencies": {
